--- a/style.css
+++ b/style.css
@@ -1566,7 +1566,7 @@ footer{
 }
 
 .chatbot-input button {
-    background-color: #4e8cff;
+    background-color: #002650;
     color: white;
     border: none;
     border-radius: 50%;
