Updated Chatbot messages

--- a/style.css
+++ b/style.css
@@ -1478,7 +1478,7 @@ footer{
         .chatbot-header {
             background:#002650;
             color: white;
-            padding: 15px;
+            padding: 13px;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -1514,8 +1514,9 @@ footer{
         }
         
         .bot-message {
-            background-color: #e5e5ea;
+            background-color: #d2d2d5;
             color: black;
+            box-shadow: 0 5px 10px rgba(0,0,0,0.4);
             margin-right: auto;
             border-bottom-left-radius: 5px;
         }
@@ -1527,6 +1528,7 @@ footer{
     color: white;
     font-weight: 600;
     text-decoration: none;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.4);
     padding: 5px 10px;
     margin-top: 10px;
     margin-bottom: -25px;
@@ -1540,6 +1542,7 @@ footer{
             background-color:#002650;
             color: white;
             margin-left: auto;
+            box-shadow: 0 5px 10px rgba(0,0,0,0.4);
             border-bottom-right-radius: 5px;
         }
         
@@ -1589,7 +1592,7 @@ footer{
         }
         
         .bot-message, .user-message {
-            animation: fadeIn 0.5s ease-out;
+            animation: fadeIn 0.6s ease-out;
         }
 
         #chatbotMessages::-webkit-scrollbar {
@@ -2461,11 +2464,14 @@ footer{
         padding: 10px;
         font-size: 13px;
     }
+    .chatbot-messages a{
+        font-size:11px;
+    }
 
     .bot-message, .user-message {
         max-width: 85%;
         padding: 7px 10px;
-        margin-bottom: 7px;
+        margin-bottom: 15px;
         font-size: 13px;
     }
 
